--- a/GoShopping/Base.lproj/LaunchScreen.storyboard
+++ b/GoShopping/Base.lproj/LaunchScreen.storyboard
@@ -29,8 +29,8 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="icons8-add_shopping_cart" translatesAutoresizingMaskIntoConstraints="NO" id="9S2-vE-6XY">
-                                <rect key="frame" x="157" y="278" width="100" height="100"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-add_shopping_cart" translatesAutoresizingMaskIntoConstraints="NO" id="9S2-vE-6XY">
+                                <rect key="frame" x="157" y="274" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Qzj-de-LAl"/>
                                     <constraint firstAttribute="width" constant="100" id="fl1-dX-FZC"/>
@@ -39,9 +39,10 @@
                         </subviews>
                         <color key="backgroundColor" name="BrandColor"/>
                         <constraints>
-                            <constraint firstItem="WdX-sA-YIT" firstAttribute="top" secondItem="9S2-vE-6XY" secondAttribute="bottom" constant="46" id="J6R-fL-U93"/>
+                            <constraint firstItem="WdX-sA-YIT" firstAttribute="top" secondItem="9S2-vE-6XY" secondAttribute="bottom" constant="50" id="J6R-fL-U93"/>
                             <constraint firstItem="WdX-sA-YIT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KlD-hj-tVR"/>
                             <constraint firstItem="WdX-sA-YIT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="QIs-NH-yOY"/>
+                            <constraint firstItem="9S2-vE-6XY" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="yFd-LB-JKm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
