--- a/GoShopping/Base.lproj/LaunchScreen.storyboard
+++ b/GoShopping/Base.lproj/LaunchScreen.storyboard
@@ -29,7 +29,7 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-add_shopping_cart" translatesAutoresizingMaskIntoConstraints="NO" id="9S2-vE-6XY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-buying" translatesAutoresizingMaskIntoConstraints="NO" id="9S2-vE-6XY">
                                 <rect key="frame" x="157" y="274" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Qzj-de-LAl"/>
@@ -53,7 +53,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icons8-add_shopping_cart" width="100" height="100"/>
+        <image name="icons8-buying" width="100" height="100"/>
         <namedColor name="BrandColor">
             <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
